# lumos-ncpt-tools

./: .gitignore  LICENSE.md  README.md  demo.ipynb  demo_data.csv  make_paper.ipynb  make_paper.py  pyproject.toml
lumos_ncpt_tools/: mixins.py  ncpt.py  utils.py
lumos_ncpt_tools/config/: ncpt_config.yaml
lumos_ncpt_tools/config/census_rank_INT_norm_tables/: battery_14.pkl  battery_17.pkl  battery_25.pkl  battery_26.pkl  battery_32.pkl  battery_39.pkl  battery_50.pkl  battery_60.pkl  subtest_26.pkl  subtest_27.pkl  subtest_28.pkl  subtest_29.pkl  subtest_30.pkl  subtest_31.pkl  subtest_32.pkl  subtest_33.pkl  subtest_36.pkl  subtest_37.pkl  subtest_38.pkl  subtest_39.pkl  subtest_40.pkl  subtest_43.pkl  subtest_44.pkl  subtest_45.pkl  subtest_51.pkl  subtest_52.pkl  subtest_53.pkl  subtest_54.pkl  subtest_55.pkl
lumos_ncpt_tools/config/rank_INT_norm_tables/: battery_14.pkl  battery_17.pkl  battery_25.pkl  battery_26.pkl  battery_32.pkl  battery_39.pkl  battery_50.pkl  battery_60.pkl  subtest_26.pkl  subtest_27.pkl  subtest_28.pkl  subtest_29.pkl  subtest_30.pkl  subtest_31.pkl  subtest_32.pkl  subtest_33.pkl  subtest_36.pkl  subtest_37.pkl  subtest_38.pkl  subtest_39.pkl  subtest_40.pkl  subtest_43.pkl  subtest_44.pkl  subtest_45.pkl  subtest_51.pkl  subtest_52.pkl  subtest_53.pkl  (+2 more)
manuscript/: US_ACS_2019_data.csv  demog_vs_GI.py  manuscript_utils.py  norm_tables.py  subtest_vs_subtest.py  summary_stats.py  table1.py  table2.py  table3.py  table4.py  table5.py
tests/: test_df.csv  test_mixins.py  test_ncpt.py  test_outliers_mixin.py  test_score_lookup_mixin.py
