[tool.poetry]
name = "lumos-ncpt-tools"
version = "0.1.0"
description = "A simple package for working with the NCPT data."
authors = ["Paul Jaffe <pauljaffe7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
pandas = "^1.3.5"
PyYAML = "^6.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
